doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/greenfoot.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/bluejext2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/classgraph-4.8.90.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.8.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/md/8b7r40h11qsf62ktq92mcth80000gn/T/AppTranslocation/1357B83B-34C1-497C-8368-1BEC70A773CB/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/aamuktadahagam/musicia
-d
/Users/aamuktadahagam/musicia/doc
-encoding
UTF-8
-charset
UTF-8
/Users/aamuktadahagam/musicia/MyWorld.java
<---- end of javadoc command ---->
Loading source file /Users/aamuktadahagam/musicia/MyWorld.java...
Constructing Javadoc information...
/Users/aamuktadahagam/musicia/MyWorld.java:12: error: type Queue does not take parameters
    public Queue <Integer> notes = new LinkedList <> ();
                 ^
/Users/aamuktadahagam/musicia/MyWorld.java:13: error: type Queue does not take parameters
    public Queue <Character> answers = new LinkedList <> ();
                 ^
/Users/aamuktadahagam/musicia/Note.java:74: error: not a statement
            removeOb
            ^
/Users/aamuktadahagam/musicia/Note.java:74: error: ';' expected
            removeOb
                    ^
warning: unknown enum constant Tag.Any
  reason: class file for threadchecker.Tag not found
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
warning: unknown enum constant Tag.Any
4 errors
4 warnings
